Added basic support for scraping from Reddit (currently gets the latest post for each subreddit)
TODO:
Record the lastest post so we don't double up
Perform a batch get on initial pull (to get a backlog)

--- a/README
+++ b/README
@@ -9,3 +9,9 @@ Uses the combination of [storm] and AdaBoost to predict what [subreddit] a parti
 
 [storm]: https://github.com/nathanmarz/storm "Storm by Nathan Marz"
 [subreddit]; http://reddit.com "Reddit"
+
+## Dependancies
+
+Storm 0.7.2-rc1
+Apache HttpComponents 4.2
+json-simple 1.1.1
